--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ionic/react": "^7.1.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "ionicons": "^7.1.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
