--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-awesome-reveal": "^4.2.3",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
