--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@ionic/react": "^7.1.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
